Overflow issue fixed

--- a/src/components/main/home/updatepoll/pollresults/PollResults.module.css
+++ b/src/components/main/home/updatepoll/pollresults/PollResults.module.css
@@ -45,7 +45,6 @@
 
 .resultPercentage {
   position: relative;
-  width: 100%;
   height: 90%;
   top: 5%;
   background-color: rgba(0, 0, 255, 0.178);
